Add the text : Désapproprions nous !

--- a/main.lyx
+++ b/main.lyx
@@ -3456,5 +3456,161 @@ ce là
  tandis que les chamois cabriolent.
 \end_layout
 
+\begin_layout Section*
+Désapproprions nous !
+\end_layout
+
+\begin_layout Standard
+Si, pour vos vacances, vous n'avez ni camping-car, ni maison secondaire
+ (à la campagne, à la mer, à la montagne ; ou les 3 à la fois ; ou une dans
+ chaque), ni terrain privé, ni quoi que ce soit sur lequel poser vos fesses
+ et bronzer, alors peut-être pourrez-vous profiter des espaces communs,
+ libres, collectifs qui composent -- sans nul doute -- la belle république
+ de France, pour vous y poser et vous y promener.
+ En somme : ses terres, ses villes, ses fleuves, ses forêts...
+ Car, après tout, comme habitant de ce pays, vous désirez jouir -- tout
+ naturellement -- de ses grands et beaux espaces, dont vous êtes -- un peu
+ -- le propriétaire (vous contribuez à la société qui s'y trouve, vous en
+ êtes citoyen).
+\end_layout
+
+\begin_layout Standard
+Voilà mes conseils de bourlingueur.
+\begin_inset Newline newline
+\end_inset
+
+N'allez pas sur les bords de fleuves et rivières : c'est privé.
+\begin_inset Newline newline
+\end_inset
+
+N'allez pas en forêts, grandes ou petites : c'est privé.
+\begin_inset Newline newline
+\end_inset
+
+Ne traversez surtout pas les campagnes ou les zones de marais : c'est privé.
+\begin_inset Newline newline
+\end_inset
+
+Rasez les falaises de granit rose ou les bords de plages : car un peu plus
+ haut, c'est privé.
+\begin_inset Newline newline
+\end_inset
+
+Du reste, je ne saurais vous dire ; je n'y suis pas allé et je n'ose, de
+ peur que cela soit privé.
+ Une partie de ce reste -- en tout cas -- est 
+\begin_inset Quotes fld
+\end_inset
+
+protégé
+\begin_inset Quotes frd
+\end_inset
+
+ ; mieux vaut alors ne pas y aller.
+\end_layout
+
+\begin_layout Standard
+Si, pour vos vacances, vous auriez voulu déambuler -- sans préparation,
+ ni carte, ni guide touristique -- dans quelques beaux espaces, à vous et
+ à tous à la fois, mieux vaut vous abstenir, emprunter quelques films et
+ livres à la médiathèque, et rester à l'aise dans votre cocon douillet.
+ Car, de ces beaux espaces, vous ne verrez que leurs panneaux rouges d'interdict
+ion, leurs grillages et leurs barbelés.
+ Et vous finirez, probablement, par vous garer sur les bords d'une route
+ communale, sortir vos sièges pliants et regarder les voitures qui passent
+ (et avec un peu de chance, le Tour de France).
+ Ça, vous le pourrez.
+ Car, après tout, cette route communale est un peu la vôtre...
+\end_layout
+
+\begin_layout Standard
+Pensez-vous que j'abuse ? À peine, je vous l'affirme ! Et je puis vous l'illustr
+er de quelques souvenirs encore révoltés.
+\end_layout
+
+\begin_layout Standard
+À certains moments de sa course, la rivière Creuse coule au fond de très
+ jolies gorges, sortes de mignardises de celles de la Loire.
+ On peut alors longer cette rivière d'en haut, la dominant tel un rapace,
+ ou d'en bas, par un très joli et fin sentier.
+ Celui-ci zigue et zague entre une eau calme et une pente abrupte, où foisonnent
+ ronces, fougères et arbustes.
+ Croyez le jeune sportif que je suis, personne n'irait foutre les guibolles
+ sur de telles pentes (ni pour la cueillette des champignons, ni pour couper
+ du bois, ni pour quoi que ce soit de -- disons -- sensé).
+ Pourtant, sur des kilomètres, on peut les voir grillagées, clôturées :
+ certaines fois de manière légère, honnête ; d'autres fois de manière insensée,
+ comme ce grillage à maillage fin soutenu par des poteaux en béton ; à chaque
+ fois, le panneau rouge 
+
+\begin_inset Quotes fld
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+mbox{Propriété privée}
+\end_layout
+
+\end_inset
+
+
+\begin_inset Quotes frd
+\end_inset
+
+
+\lang french
+ s'affiche sans aucun complexe.
+ Mais que croient-ils rendre privé, ces misérables propriétaires, sinon
+ une nature anarchique, dont assurément ils ne profitent pas et qu'ils enlèvent
+ au monde ?
+\end_layout
+
+\begin_layout Standard
+Sur ces mêmes bords de Creuse, en vis-à-vis de ces pentes unanimement privées,
+ un nombre significatif de barques sont à pourrir.
+ Ces mortes embarcations -- oubliées par leur maître depuis des années sûrement
+ -- affichent fièrement le signe de leur allégeance : une chaîne solide
+ et imputrescible, cadenassée fermement ! L'objet du loisir, lui, a fini
+ par couler, sans pouvoir nourrir le bonheur d'autres, devenant ainsi la
+ ridicule épave d'un égoïsme absurde.
+\end_layout
+
+\begin_layout Standard
+Voilà deux petits exemples où l'on s’approprie du fugace, du néant.
+ En France, il y en des milliers d'autres, tous aussi absurdes : en bords
+ de Loire, de Vienne, d'Indre et de toutes rivières ; de l'orée au cœur
+ des bois ; à flan de montagne ; partout ! À chaque fois, ces démonstrations
+ me sonnent, m'ahurissent.
+ Tant de personnes -- à commencer par moi qui n'ai qu'un kayak, un sac à
+ dos, l'amour de Marie et quelques euros en poche -- aimeraient pourtant
+ y déambuler -- égoïstement mais partageur -- sans se sentir gêneur, squatteur,
+ violeur d'un sanctuaire, étranger.
+ Elles aimeraient le faire en liberté de corps et d'âme.
+\end_layout
+
+\begin_layout Standard
+Que l'on ouvre tous ces endroits à la multitude ! Que l'on partage, que
+ l'on coopère, que l'on gère ensemble !
+\end_layout
+
+\begin_layout Standard
+Peut-être, alors, que ce couple du 
+\begin_inset Quotes fld
+\end_inset
+
+93
+\begin_inset Quotes frd
+\end_inset
+
+ pourra déplier ses chaises longues en de plus beaux et vastes endroits
+ qu'au bord d'une route communale de Creuse.
+\end_layout
+
 \end_body
 \end_document
