Add the text : La Brenne

--- a/main.lyx
+++ b/main.lyx
@@ -3013,7 +3013,7 @@ Ni une ni deux -- encore -- le prince se mit sur son séant, bottant celui
  Enfourchant leurs sandales, ils coururent vers deux bottes de paille, sur
  l'une desquelles le prince grimpa.
  Et là, sur le champ de blé coupé -- légèrement en hauteur et avec, ouest-nord-o
-uest, un panorama très ouvert --, ils contemplèrent, de leurs yeux boursoufflés
+uest, un panorama très ouvert --, ils contemplèrent, de leurs yeux boursouflés
  et endormis, un des plus beaux orages que le bon Dieu leur ait donné à
  voir.
 \end_layout
@@ -3368,7 +3368,7 @@ Je crois que mon tableau est clair : ce petit homme nous a fait rire et
 \end_layout
 
 \begin_layout Standard
-Sur les routes de Creuse, la morosité gangrénait nos cœurs et quelques coquilles
+Sur les routes de Creuse, la morosité gangrenait nos cœurs et quelques coquilles
  nous cassaient les noix de Saint\SpecialChar \nobreakdash-
 Jacques.
  D'un côté, il y avait ce foutu jugement : que ces chemins là n'étaient
@@ -3542,7 +3542,6 @@ er de quelques souvenirs encore révoltés.
  certaines fois de manière légère, honnête ; d'autres fois de manière insensée,
  comme ce grillage à maillage fin soutenu par des poteaux en béton ; à chaque
  fois, le panneau rouge 
-
 \begin_inset Quotes fld
 \end_inset
 
@@ -3563,8 +3562,6 @@ mbox{Propriété privée}
 \begin_inset Quotes frd
 \end_inset
 
-
-\lang french
  s'affiche sans aucun complexe.
  Mais que croient-ils rendre privé, ces misérables propriétaires, sinon
  une nature anarchique, dont assurément ils ne profitent pas et qu'ils enlèvent
@@ -3610,6 +3607,144 @@ Peut-être, alors, que ce couple du
 
  pourra déplier ses chaises longues en de plus beaux et vastes endroits
  qu'au bord d'une route communale de Creuse.
+\end_layout
+
+\begin_layout Section*
+La Brenne
+\end_layout
+
+\begin_layout Standard
+Qu'est ce que la Brenne ? Avant de préparer notre grande marche, comme vous
+ peut-être, ce nom ne me disait rien.
+ C'est devant l'écran de mon ordinateur, travaillant sur des cartes IGN
+ pour y dénicher des sentiers de rando sympas, que j'ai découvert ce territoire.
+ Nous devions aller vers Châteauroux.
+ Mais, à 50
+\begin_inset space ~
+\end_inset
+
+kilomètres au sud-ouest de cette ville importante, un territoire aux contours
+ verts m'est apparu.
+ Il portait la mention 
+\begin_inset Quotes fld
+\end_inset
+
+Parc Naturel Régional de la Brenne
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Mon alarme de naturaliste m'a sitôt signalé l'opportunité d'y découvrir
+ un bel écosystème.
+ C'est décidé, 
+\emph on
+kenavo
+\emph default
+ Châteauroux et 
+\emph on
+demat
+\emph default
+ la Brenne !
+\end_layout
+
+\begin_layout Standard
+Le rythme de nos pas nous a fait découvrir ce parc deux fois.
+ La première, d'une façon touristique 
+\begin_inset Quotes fld
+\end_inset
+
+classique
+\begin_inset Quotes frd
+\end_inset
+
+, puisque nous avons couché trois nuits en chambre d'hôte et que nous nous
+ déplacions en voiture.
+ Pourquoi ? Parce que nos mamans nous ont rejoints pour trois jours de vacances.
+ Nous n'allions pas les obliger à bivouaquer et à 
+\begin_inset Quotes fld
+\end_inset
+
+marcher forcé
+\begin_inset Quotes frd
+\end_inset
+
+ ; un peu de confort tout de même ! La deuxième, nous l'avons découvert
+ comme à notre habitude, marchant immergés dans le milieu.
+\end_layout
+
+\begin_layout Standard
+Alors cette Brenne ? Il s'agit d'un territoire du département de l'Indre,
+ composé de près de 2500
+\begin_inset space ~
+\end_inset
+
+étangs (tous artificiels) et de landes pâturées.
+ L'homme y vit de la pisciculture, de l'élevage bovin et caprin (goûtez-moi
+ ce fameux pouligny-saint-pierre), de quelques cultures et d'un tourisme
+ timide.
+\end_layout
+
+\begin_layout Standard
+Pourquoi un 
+\begin_inset Quotes fld
+\end_inset
+
+Parc Naturel Régional
+\begin_inset Quotes frd
+\end_inset
+
+ (PNR) s'est-il implanté ici ? Parce que les écosystèmes de la Brenne (en
+ particulier ses zones humides) ont une biodiversité riche et remarquable,
+ que les activités non modérées de l'homme mettent en péril.
+ Il y a, ici, l'un des derniers et le plus important bastion de la cistude
+ d'Europe (tortue d'eau protégée et emblème du parc).
+ Nos mamans n'ont pas eu la chance d'en voir (excepté sur les panneaux signalisa
+nt, aux automobilistes, leurs traversées), mais nous si ! Au bord d'un étang,
+ un soir, un gros caillou lointain s'est révélé être -- après une longue
+ observation et une grande hésitation -- une de ces fameuses cistudes.
+ On y trouve aussi et en vrac : des espèces végétales de zones humides et
+ de landes (roseaux, salicaires, bruyères...) ; de nombreuses espèces de libellules
+ et papillons ; une large avifaune dont de nombreux ardéidés (hérons cendrés,
+ pourprés et gardes bœufs, blongios nains, butors étoilés...) ; quelques reptiles
+ ; des mammifères de landes et de forêts (cerfs, sangliers...) ; etc.
+\end_layout
+
+\begin_layout Standard
+Durant les trois jours de vacances, nous avons : largement papouillé nos
+ mamans, tout juste lavé nos vêtements et allègrement rempli nos estomacs
+ ! Chaque matin, notre hôtesse, la truculente M
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+me
+\end_layout
+
+\end_inset
+
+ Barbarin, nous régalait de super petits-déjeuners complets (avec de nombreux
+ produits de sa ferme).
+ Nos papilles ont également dégusté quelques spécialités brennoises (allez
+ donc, au restaurant de la 
+\begin_inset Quotes fld
+\end_inset
+
+Maison du Parc
+\begin_inset Quotes frd
+\end_inset
+
+, tremper des frites de carpes dans leur sauce de chèvre frais).
+\end_layout
+
+\begin_layout Standard
+Ceci fut un avant-goût de la Brenne ; nous n'avons pas pu tout y découvrir.
+\end_layout
+
+\begin_layout Standard
+Si, comme nous, vous aimez le tourisme tranquille et observer la nature,
+ n'hésitez pas.
+ Il y a, en Brenne, de quoi vous faire plaisir.
+ Nous y retournerons, et peu importe la saison, car la Brenne semble toujours
+ belle.
 \end_layout
 
 \end_body
