Add the text : Photographies de Creuse

--- a/main.lyx
+++ b/main.lyx
@@ -3747,5 +3747,280 @@ Si, comme nous, vous aimez le tourisme tranquille et observer la nature,
  belle.
 \end_layout
 
+\begin_layout Section*
+Photographies de Creuse
+\end_layout
+
+\begin_layout Standard
+N'ayant ni le matériel ni les compétences pour vous proposer de jolies photograp
+hies de Creuse, je vais tâcher de vous les écrire en quelques lignes.
+ Mais, avant de vous avancer mes trois meilleurs clichés, laissez-moi vous
+ expliquer cette démarche.
+\end_layout
+
+\begin_layout Standard
+Notre marche non-forcée nous a fait découvrir la très verte Creuse, du nord-oues
+t au sud-ouest, puis du sud-ouest à la mi-est.
+ Les cieux nuageux, et leurs fréquentes et parfois longues pluies, ont été
+ nos compagnons indéfectibles.
+ Et la boue est devenue l'intime amie de nos semelles.
+ Tous les paysages pouvaient se résumer en une couche blanche nuageuse,
+ posée sur une autre verte forestière.
+ La Creuse nous révélait, alors, une âme lumineuse et tranquille, à la poésie
+ fantastique.
+\end_layout
+
+\begin_layout Standard
+Pourtant, chacun de mes 
+\emph on
+clic-clac
+\emph default
+ photographiques n'affichait qu'un beau ciel sur une bande tristement noire,
+ ou une belle forêt sous une bande blanche éblouissante.
+ Je perdais toujours les jeux d'ombres et de lumières des entremêlements
+ de nuages, ou les contrastes et la profondeur des immenses forêts.
+ Rien de bon, donc, à vous proposer.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Clic-clac
+\end_layout
+
+\begin_layout Standard
+Cette première photo a été prise sur les hauteurs de Crozant, à l'extrême
+ nord-ouest creusois, le 13
+\begin_inset space ~
+\end_inset
+
+juillet
+\begin_inset space ~
+\end_inset
+
+2011.
+ La petite bourgade et sa campagne ont, semble-t-il, inspiré plus d'un peintre
+ ou d'un écrivain.
+\end_layout
+
+\begin_layout Standard
+Voyez la luminosité globale du cliché : elle est blafarde, presque fantomatique.
+ C'est qu'en ce jour -- le premier de notre cinquième département -- le
+ ciel est chargé d'une couche nuageuse épaisse, un brouillard froid qui
+ crache ses fines gouttes depuis le matin.
+\end_layout
+
+\begin_layout Standard
+Le panorama photographié est un bout des gorges de la Creuse.
+ Magnifique ! non ? À les découvrir aussi belles que celles de la Loire,
+ je fus tout ému.
+ Pour être exact, la rivière qui coule en contrebas n'est pas la Creuse
+ mais la Sédelle.
+ Ici, nous sommes tout juste à la confluence des deux rivières, qui vont
+ se jeter dans la Vienne 150
+\begin_inset space ~
+\end_inset
+
+kilomètres plus loin.
+ Le filet d'eau peut paraître bien large, pour une simple rivière.
+ Mais, à 10
+\begin_inset space ~
+\end_inset
+
+kilomètres au nord, il y a le barrage électrique d'Éguzon qui crée, en amont,
+ une énorme retenue d'eau.
+ EDF exploite, dans ces gorges creusoises, pas moins de six barrages ! Une
+ rivière dans une gorge est une pépite d'or pour une compagnie d'électricité.
+ Cette compagnie est-elle aussi dorée pour l'environnement, la nature, le
+ vivant ? Les rouages doivent tourner...
+\end_layout
+
+\begin_layout Standard
+Désormais, ouvrons grands nos yeux pour contempler les couleurs des bourrelets
+ de terre.
+ Voilà quelques gris parsemés : c'est la roche qui constitue les fondements
+ de ces hauteurs, et qui ressort ci et là.
+ Partout, une multitude de verts : c'est une armée de feuillus qui a gagné
+ cette roche et colonisé son humus.
+ Ne peuvent aussi vous échapper tous ces oranges et ces marrons clairs :
+ l'automne s'éveille bien tôt cette année.
+\end_layout
+
+\begin_layout Standard
+Laissons maintenant cette nature, ses tons et ses couleurs, et braquons
+ la tête -- à gauche -- droit vers l'homme.
+ Voici les deux tours de Crozant, dernières ruines d'une forteresse médiévale
+ bâtie par le conte d'Anjou.
+ Ces tours -- propriété privée -- sont en bien mauvais état, comme le témoigne
+ les énormes échafaudages qui bardent l'une d'entre elles.
+ Cette impressionnante rénovation casse largement le bucolique d'une scène
+ mille fois peinte, proposant alors une détonante perspective du paysage.
+ Le beau et l'affreux se subliment.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Clic-clac
+\end_layout
+
+\begin_layout Standard
+Voici un deuxième cliché.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Vue sur la lande d'Augerolles
+\begin_inset Quotes frd
+\end_inset
+
+ : 800
+\begin_inset space ~
+\end_inset
+
+mètres d'altitude ; 15
+\begin_inset space ~
+\end_inset
+
+kilomètres au sud de Bourganeuf ; sud de la Creuse ; nord du plateau de
+ Millevaches ; 27
+\begin_inset space ~
+\end_inset
+
+juillet
+\begin_inset space ~
+\end_inset
+
+2011 - 15
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30.
+\end_layout
+
+\begin_layout Standard
+Qu'y voit-on, mesdames messieurs ? Sur sa moitié supérieure, un ciel archi-couve
+rt de blancs et de nuages cotonneux, que quelques éclaircies percent péniblement.
+ Sur l'autre, une lande pas bien grande, fraîchement dégrossie de ses 
+\begin_inset Quotes fld
+\end_inset
+
+envahissants
+\begin_inset Quotes frd
+\end_inset
+
+, parsemée de pierres et d'arbustes.
+ Au fond à droite de cette lande, des moutons (une quarantaine) se reposent
+ et paissent à l'ombre de jeunes feuillus laissés intacts par l'homme.
+ Ils l'entretiennent à leur rythme, retardant l'instant où la forêt se refermera
+ sur elle.
+\end_layout
+
+\begin_layout Standard
+Vous êtes ici, avec nous, sur les maximas hauteurs du département.
+ Voyez tout autour, en contrebas et sur les collines lointaines, le visage
+ contemporain de la Creuse : les forêts de résineux.
+ Voyez aussi son plus grand malheur.
+\end_layout
+
+\begin_layout Standard
+Il y a 50
+\begin_inset space ~
+\end_inset
+
+ans encore -- même si les activités agricoles diminuaient et que les forêts
+ autochtones regagnaient quelque peu leurs territoires ancestraux -- ces
+ espaces vallonnés étaient largement ouverts, suffisamment entretenus par
+ l'homme (cultures, pâtures, extraction de tourbe...).
+ Il y a 50
+\begin_inset space ~
+\end_inset
+
+ans alors, de grands propriétaires terriens y semèrent en masse des résineux
+ à la croissance rapide (épicéas, douglas...), réaménageant en quelques décennies
+ le territoire, bouleversant sa vie et sa photographie.
+ Une Creuse mourante naissait.
+\end_layout
+
+\begin_layout Standard
+Au dessus des blancs moutons, sur le flanc de la colline voisine, un groupe
+ de tâches blanches se distingue, contrastant avec le vert sombre de la
+ forêt.
+ C'est une ville moyenne creusoise -- toute petite ville française -- gardienne
+ de la vallée et de sa solitude.
+ Elle vivote cet été et tentera de survivre cet hiver ; puis elle recommencera,
+ jusqu'à son ensevelissement sous les racines des arbres et les roues des
+ machines.
+\end_layout
+
+\begin_layout Standard
+Quand à cette lande, dites-vous bien que c'est un sanctuaire, une pièce
+ à ciel ouvert du musée de la vieille Creuse, que quelques protecteurs continuen
+t de dépoussiérer (le PNR de Millevaches l'entretient, avec nos contributions
+ citoyennes).
+ Mais son destin sera celui, probable, de la Creuse : elle mourra ! Peut-être,
+ pourtant, qu'un dynamisme positif pourrait s'épanouir de nouveau ici.
+ On dit, d'ailleurs, que les jeunes éleveurs de brebis y seraient les bienvenus...
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Clic-clac
+\end_layout
+
+\begin_layout Standard
+Voilà le troisième et dernier cliché.
+ Certains d'entre vous connaissent peut-être l'endroit, situé à califourchon
+ entre Creuse, Corrèze et Haute\SpecialChar \nobreakdash-
+Vienne.
+ Il s'agit du lac de Vassivière, haut lieu de villégiature limousin s'il
+ en est.
+\end_layout
+
+\begin_layout Standard
+Sur une plage, Marie est figée, droite, au bord de l'eau, protégée par le
+ dôme d'un gros et très vieux pin.
+ Son regard embrasse goulûment l'envoûtant paysage : des collines et de
+ vastes forêts de résineux, qui embrassent les contours du lac, qui embrassent
+ trois ou quatre petites villes balnéaires, qui embrassent l'eau des sources
+ du plateau de Millevaches.
+\end_layout
+
+\begin_layout Standard
+L'ambiance, donc, est aux embrassades.
+ Au repos aussi.
+ Pas de critiques acerbes, ni de militantisme, cette fois-ci.
+ Nous sommes venus au bord de toute cette eau pour un décrassage bien mérité,
+ de la détente et un soupçon de tranquillité.
+ Et ce ne sont pas ces gros nuages blancs, cachant quelque peu nos rares
+ éclaircies creusoises, qui vont nous gâcher la vie.
+\end_layout
+
 \end_body
 \end_document
