Add the text : Vision d'un Sud

--- a/main.lyx
+++ b/main.lyx
@@ -4022,5 +4022,419 @@ L'ambiance, donc, est aux embrassades.
  éclaircies creusoises, qui vont nous gâcher la vie.
 \end_layout
 
+\begin_layout Section*
+Anniversaire auvergnat
+\end_layout
+
+\begin_layout Standard
+L'anniversaire de Mathieu est le 5
+\begin_inset space ~
+\end_inset
+
+août.
+ Cette année, il l'a fêté seul avec moi, sur les monts auvergnats.
+ Et ce fut merveilleux ! Les réjouissances ont duré dix jours, à crapahuter
+ sur les plus hauts sommets d'Auvergne, à sentir la liberté, à rencontrer
+ des gens extraordinaires.
+\end_layout
+
+\begin_layout Standard
+Le soir du premier août, nous mangions de gros champignons à 1200
+\begin_inset space ~
+\end_inset
+
+mètres d'altitude, sur le puy des Gouttes, contemplant le plus beau coucher
+ de soleil de notre vie.
+ Le lendemain, nous mordions la terre de trois sommets.
+ Celle du 
+\begin_inset Quotes fld
+\end_inset
+
+mythique
+\begin_inset Quotes frd
+\end_inset
+
+ puy de la Fraisse, en haut duquel aucun sentier ne mène (et pour cause
+ : une forêt le recouvre qui ne laisse rien voir).
+ Celle du Pariou, accessible via une longue rampe en bois, avec son vent
+ violent et sa vue splendide.
+ Enfin, celle du puy de Dôme (le plus touristique, que grimpent des dames
+ chics en espadrilles) duquel on peut contempler -- dit-on -- un huitième
+ du territoire français métropolitain.
+ Nous l'avons gravi rapides comme des chamois ; mais sur sa fin, il nous
+ a coupé le souffle et les pattes.
+\end_layout
+
+\begin_layout Standard
+L'après-midi du 4
+\begin_inset space ~
+\end_inset
+
+août fut passé sur une très jolie crête, du puy de la Tâche au puy de l'Angle,
+ à 1600
+\begin_inset space ~
+\end_inset
+
+mètres d'altitude et plus.
+ Nous n'avions qu'à profiter de chaque vue, chaque courant d'air, chaque
+ pas.
+ Que nous nous sentions libres et forts d'être arrivés là, sac au dos !
+ Puis, c'est à 1650
+\begin_inset space ~
+\end_inset
+
+mètres d'altitude, en dessous du Roc de Cuzeau, que nous avons bivouaqué,
+ achevant cette merveilleuse journée en montagne.
+ En soirée, quelques chamois sont venus gambader, 50
+\begin_inset space ~
+\end_inset
+
+mètres au-dessus de nos têtes, nous donnant une belle leçon d'agilité.
+\end_layout
+
+\begin_layout Standard
+Le matin du 5
+\begin_inset space ~
+\end_inset
+
+août (jour fatidique), c'est au son des cloches de centaines de moutons
+ que nous nous sommes éveillés.
+ Ils estivent tout l'été, se baladant de crêtes en sommets.
+ Après une demi-heure de leur transhumance, nous pûmes enfin sortir de la
+ tente.
+ La couche nuageuse rafraîchissait l'air ; le brouillard nous enveloppait.
+\end_layout
+
+\begin_layout Standard
+En direction du puy de Sancy, nous avions (littéralement) la tête dans les
+ nuages et le cœur léger.
+ Que le chemin fut court ; mais nous eûmes la chance de voir : un chamois,
+ un groupe de six mouflons, une marmotte et quelques faucons.
+ Au sommet du Sancy, le gris était partout ; impossible de voir quoi que
+ ce soit, la belle affaire ! Mais ce fut l'occasion, en attendant une éclaircie,
+ de prendre le thé avec Giovanni, un randonneur nantais.
+ Nous papotâmes brouillard faisant : de nos vies et de nos envies ; de nos
+ chemins et de nos pas ; et de 
+\begin_inset Quotes fld
+\end_inset
+
+Jean la plante
+\begin_inset Quotes frd
+\end_inset
+
+, un sacré barbu auvergnat qu'il nous fallait voir.
+\end_layout
+
+\begin_layout Standard
+Puis, nous avons quitté les hauteurs, rejoignant pour quelques temps un
+ autre monde : celui de Super-Besse, de ses immeubles et de ses téléskis.
+ Quels contrastes !
+\end_layout
+
+\begin_layout Standard
+Le 6
+\begin_inset space ~
+\end_inset
+
+août, après un détour de 20
+\begin_inset space ~
+\end_inset
+
+kilomètres, c’est à l’heure du thé que nous sommes arrivés au 
+\begin_inset Quotes fld
+\end_inset
+
+Bistrot
+\begin_inset Quotes frd
+\end_inset
+
+ de Brion.
+ Hélène est la gardienne du lieu, duquel se dégage une ambiance de chaos
+ poétique et de vive chaleur humaine.
+ Elle y sert des infusions et cuisine de succulents plats, à base des plantes
+ que Jean récolte, courant les bois et les tourbières.
+ Grand privilège (car arrivant à l’improviste) : nous avons pu y dîner.
+ Ce fut un sacré repas d’anniversaire, sublimé par quelques attentions :
+ deux pots d’un lait fraîchement trait, deux kirs à l’angélique chinoise,
+ une visite chez le fromager d’à côté et la compagnie pleine d’énergie de
+ Jean.
+ Au terme du repas, nous nous sentions en famille.
+ La nuit fut venteuse dans le champ d’Hélène.
+ Mais le petit-déjeuner fut doux, aux côtés de la généreuse tenancière.
+ Que nous aurions aimé rester dans un petit coin de ce bistrot, pour voir
+ vivre ces deux extraordinaires personnages.
+ Nous avons pourtant repris la route, les cœurs légers et pleins d’espoirs.
+ Les monts du Cantal nous attendaient.
+\end_layout
+
+\begin_layout Standard
+Nos dernières hauteurs d’Auvergne, nous les avons arpentées durant trois
+ jours, en compagnie d’une charmante famille parisienne, avec qui nous avons
+ pique-niqué puis bivouaqué, et que nous avons quitté au Plomb du Cantal.
+\end_layout
+
+\begin_layout Standard
+Mathieu a passé un merveilleux anniversaire ; et, finalement, il n’était
+ pas seul avec moi.
+ Car ce sont les cœurs d’une belle diversité humaine qui se sont offerts
+ à lui.
+\end_layout
+
+\begin_layout Standard
+Nous voici à Saint-Flour, en limite de Cantal, pour y découvrir nos prochains
+ itinéraires.
+\end_layout
+
+\begin_layout Chapter*
+Chapitre 3
+\end_layout
+
+\begin_layout Section*
+Portrait d'un Sud
+\end_layout
+
+\begin_layout Standard
+Un mois et demi de marche à travers des territoires peu peuplés se terminait.
+ En descendant le mont Aigoual, au cœur des Cévennes, nous rentrions de
+ plein pied dans 
+\begin_inset Quotes fld
+\end_inset
+
+le pays du Sud
+\begin_inset Quotes frd
+\end_inset
+
+, son climat méditerranéen et sa franche humanité.
+\end_layout
+
+\begin_layout Standard
+La bascule dans cette autre France commençait bien.
+ Au pied des 
+\begin_inset Quotes fld
+\end_inset
+
+4000 marches
+\begin_inset Quotes frd
+\end_inset
+
+
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Les 
+\begin_inset Quotes fld
+\end_inset
+
+4000
+\begin_inset space ~
+\end_inset
+
+marches
+\begin_inset Quotes frd
+\end_inset
+
+ : très belle randonnée, entre Valleraugues et le mont Aigoual, de 1200
+\begin_inset space ~
+\end_inset
+
+m de dénivelé sur 11
+\begin_inset space ~
+\end_inset
+
+km.
+\end_layout
+
+\end_inset
+
+, la cité de Valleraugue, un dimanche matin
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+28 août 2011.
+\end_layout
+
+\end_inset
+
+, était grouillante de vie.
+ Quelques personnes âgées, toutes pimpantes, papotaient devant l'église
+ réformée, avant la messe.
+ D'autres emplissaient des paniers de fruits, légumes, viandes et pains
+ frais.
+ Tandis que d'autres, encore, se baignaient dans les flots du soleil à la
+ terrasse d'un café.
+ Nous, assis au bord d'une rivière, nous enivrions des sons, senteurs et
+ visions du Sud, en préparant notre festin.
+ La journée fut belle, reposante et nécessaire, entre des Cévennes difficiles
+ et une traversée sudiste pas toujours enthousiasmante.
+\end_layout
+
+\begin_layout Standard
+Les trois jours suivants, nous déambulions dans la garrigue et la pinède,
+ dans la caillasse et la poussière.
+ Nous traversions des bourgs aux rues étroites, aux maisons collées-serrées
+ et aux murs colorés, où existe -- toujours -- une place pour les amoureux
+ de la pétanque.
+ Nous découvrions le goût délicieux des figues juteuses, et croquions le
+ raisin sucré par grappes entières.
+ Les lauriers en fleurs -- roses ou blanches -- bordaient les allées, colorant
+ un paysage jauni.
+\end_layout
+
+\begin_layout Standard
+Nous rapprochant de l'axe Nîmes-Monptellier, nous quittâmes pourtant ce
+ bel arrière-pays, nous engouffrant dans l'urbanisation et l'industrie.
+ L'adjectif 
+\begin_inset Quotes fld
+\end_inset
+
+typique
+\begin_inset Quotes frd
+\end_inset
+
+ des cités s'est noyé, alors, entre les mots 
+\begin_inset Quotes fld
+\end_inset
+
+pavillonnaire
+\begin_inset Quotes frd
+\end_inset
+
+ et 
+\begin_inset Quotes fld
+\end_inset
+
+dortoir
+\begin_inset Quotes frd
+\end_inset
+
+ que des villas -- avec piscine, clôture et chien -- ont fait pousser.
+ Malgré l'humanité grouillante, la vie ici ne suinte pas à grosses gouttes.
+ L'agriculture y est intensive et les vignes, immenses et aux odeurs parfois
+ pestilentielles, ne donnent point trop envie.
+\end_layout
+
+\begin_layout Standard
+Le mercredi soir
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+31 août.
+\end_layout
+
+\end_inset
+
+, au milieu de ces vignes là, nous dûmes planter notre tente, faute de mieux.
+ À 21
+\begin_inset space ~
+\end_inset
+
+heures, le repas à peine entamé, un orage éclata sur une vaste zone au-dessus
+ de nos têtes.
+ Et cet orage fut fou ! Dans une atmosphère sèche et sans trop de vent pour
+ le souffler, il dégueula tous ses grondements, ses éclairs et un peu de
+ ses pluies brutales, tournant avec zèle toute la nuit, jouant méticuleusement
+ avec nos nerfs.
+ Les lumières -- jaunes et oranges, rouges et violettes, blanches et bleues
+ -- travestissaient la nuit en jour.
+ Allions-nous crever ici, dans cet endroit glauque, sous ce spectacle majestueux
+ ? Non.
+ Le matin s'éveilla et les grondements -- peu à peu -- s'éloignèrent, laissant
+ derrière eux un ciel aux lambeaux de nuages déchiquetés, magnifiques !
+\end_layout
+
+\begin_layout Standard
+Encore deux jours d'une marche morose, à soulever la poussière d'un sol
+ sec, à suer sous une chaleur étouffante, avant de quitter -- enfin -- l'oppress
+ante périphérie de Nîmes.
+ Le bucolique s'épanouit de nouveau, sous l'égide de cultures maraichères
+ bien sympathiques : tomates, melons, vignes accompagnées d'herbes folles...
+ Comme pour nous accueillir, un quinquagénaire à l'allure débonnaire et
+ au bon et large sourire s'avança, torse nu, la bedaine sortant d'un short
+ rikiki, sur un vieux tracteur rouge pétaradant.
+ Sous un ciel déteignant en oranges, le tableau paraissait presque trop
+ authentique, mais réconfortait pleinement nos cœurs.
+\end_layout
+
+\begin_layout Standard
+Le samedi
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+3 septembre.
+\end_layout
+
+\end_inset
+
+, nous dûmes forcer les portes de la Camargue.
+ Passant outre l'interdiction de pénétrer sur un long chemin bordé de hauts
+ roseaux, nous découvrîmes l'étang de Scamandre et sa bordure marécageuse.
+ Nous gambadions -- les yeux et les oreilles grands ouverts -- dans un écosystèm
+e que nous connaissons bien et que nous aimons tant : une zone humide, ses
+ canaux et ses roselières, ses oiseaux limicoles, ses canards et ses libellules.
+ En quelques lieux, notre vue pouvait s'échapper du chemin et planer sur
+ l'immensité bleue et brillante de l'étang, sur lequel batifolaient des
+ colonies de canards colverts.
+ Bien entendu, la vie et la poésie s'épanouissaient en ce lieu.
+ Mais le soir même, une valse de la mort s'y jouerait : 
+\begin_inset Quotes fld
+\end_inset
+
+Ouverture de la chasse au gibier d'eau
+\begin_inset Quotes frd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+La Camargue nous montra, aussi, ses troupeaux de taureaux noirs et ses chevaux
+ blancs, les pattes à demi dans l'eau, un héron garde bœufs posé sur le
+ dos.
+ Que nous offrit-elle d'autre ? Des piquants essaims de moustiques.
+ De longues et larges rizières vertes, un peu jaunies.
+ D'interminables routes comme seul terrain de jeu pour touristes et voyageurs.
+ De vastes territoires sans ville ni village.
+\end_layout
+
+\begin_layout Standard
+Nous pressentions que cette Camargue n'était pas faite pour les marcheurs
+ -- ni de grands chemins, ni de petits non plus.
+ Le premier jour en son sein confirma, la carte d'état-major aussi.
+ Ferions-nous, en deux jours, 40
+\begin_inset space ~
+\end_inset
+
+kilomètres sur une départementale encadrée de roseaux et de rizières, sans
+ voir âme qui vive, pour rejoindre les Saintes\SpecialChar \nobreakdash-
+Maries\SpecialChar \nobreakdash-
+de\SpecialChar \nobreakdash-
+la\SpecialChar \nobreakdash-
+Mer ? Longerions-nous
+ 40
+\begin_inset space ~
+\end_inset
+
+kilomètres de digues et de plages, sans probable ravitaillement en eau,
+ pour rejoindre Salin de Badon ? Traverserions-nous la vaste et déserte
+ plaine des Coussouls de Crau, pour rejoindre Arles ? À ce stade du voyage,
+ non ! Solutions furent prises : de faire du stop jusqu'aux Saintes\SpecialChar \nobreakdash-
+Maries\SpecialChar \nobreakdash-
+de\SpecialChar \nobreakdash-
+la\SpecialChar \nobreakdash-
+Mer
+, puis de remonter en bus jusqu'à Arles.
+ Entre les deux et pendant deux jours, nous flânâmes dans la ville, glandouillâm
+es sur la plage (lisant et écrivant) et nous baignâmes dans la chaude eau
+ méditerranéenne.
+ L'expérience fut piquante pour notre orgueil de marcheur, mais ouvrit de
+ folles perspectives de voyages.
+ Et pour nous consoler, les flamants roses nous offrirent -- nombreux sur
+ l'eau et dans les airs -- un joli spectacle au coucher du soleil.
+\end_layout
+
 \end_body
 \end_document
